--- a/DistLibrary/Makefile
+++ b/DistLibrary/Makefile
@@ -3,7 +3,7 @@ CC = g++ -std=c++11
 
 
 final: customDistributions.o
-	ar rvs lib2 customDistributions.o
+	ar rvs distslib customDistributions.o
 
 customDistributions.o: customDistributions.hpp customDistributions.cpp
 	$(CC) $(CFLAGS) -c customDistributions.cpp
